@@ -9,6 +9,7 @@
         "upload": "aws s3 cp dist/wonder-scale-merchant s3://merchant.wonderscale.com --recursive",
         "deploy": "npm run build && npm run upload",
         "upload-testing": "aws s3 cp dist/wonder-scale-merchant s3://merchant-testing.wonderscale.com --recursive",
+        "build-testing": "ng build --configuration qa --aot",
         "deploy-testing": "ng build --configuration qa --aot && npm run upload-testing",
         "test": "ng test",
         "lint": "ng lint",
